# systemd-initctl

./: .gitignore  Makefile.am  autogen.sh  configure.ac  meson.build
src/: initctl.c  meson.build
units/: meson.build  systemd-initctl.service.in
